added basic functionality
